--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="main.css">
     <title>Web Portfolio of Marco</title>
   </head>
   <body>
     <h1>Web Portfolio of Marco</h1>
-    <p>Write anything you want to tell the world.</p>
+
+    <h2>Welcome!</h2>
+
+    <p>Thanks for stopping by.</p>
+
+    <p>Please have a look around. In the blog section I document my experiences in programming. You may also look at my web projects. Have fun.</p>
+
+    <img src="marco.jpg" alt="Picture of me">
+
+    <p>Marco :-)</p>
   </body>
 </html>
